cavea-back/k8s/db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: cavea-back-namespace
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysqldata
            mountPath: /var/lib/mysql
        resources:
          limits:
            memory: "512Mi"  # Maximum memory allowed
            cpu: "400m"       # Maximum CPU allowed (200 milliCPU)
          requests:
            memory: "256Mi"  # Initial memory request
            cpu: "200m"       # Initial CPU request
      volumes:
        - name: mysqldata
          persistentVolumeClaim:
            claimName: mysql-pvc
