cavea-back/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cavea-back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cavea-back
  template:
    metadata:
      labels:
        app: cavea-back
    spec:
      containers:
      - name: cavea-back
        image: smophmie/cavea-back:1.0.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "256Mi"  # Maximum memory allowed
            cpu: "200m"       # Maximum CPU allowed (200 milliCPU)
          requests:
            memory: "128Mi"  # Initial memory request
            cpu: "100m"       # Initial CPU request
