cavea-back/k8s/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: cavea-back-namespace
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
