cavea-back/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cavea-back-service
spec:
  selector:
    app: cavea-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
